examples/errors/diff_in_arg_count.jj
func f
with x 
returns x

func f
with x, y
when x == 2
returns x


func main 
{
    f(1);
}
